--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     },
     "dependencies": {
         "@next/bundle-analyzer": "^10.0.5",
+        "@tailwindcss/aspect-ratio": "^0.3.0",
         "@types/react-grid-layout": "^1.1.2",
+        "@types/react-transition-group": "^4.4.3",
         "axios": "^0.21.1",
         "next": "10.2.0",
         "next-compose-plugins": "^2.2.1",
@@ -24,6 +26,8 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-grid-layout": "^1.3.0",
+        "react-rating": "^2.0.5",
+        "react-transition-group": "^4.4.2",
         "react-use": "^15.3.8",
         "recoil": "^0.1.2"
     },
