--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "test": "jest -c test/jest.config.js"
     },
     "dependencies": {
+        "@headlessui/react": "^1.4.1",
         "@next/bundle-analyzer": "^10.0.5",
         "@tailwindcss/aspect-ratio": "^0.3.0",
         "@types/react-grid-layout": "^1.1.2",
@@ -25,11 +26,13 @@
         "prettier": "^2.2.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "react-google-login": "^5.2.2",
         "react-grid-layout": "^1.3.0",
         "react-rating": "^2.0.5",
         "react-transition-group": "^4.4.2",
         "react-use": "^15.3.8",
-        "recoil": "^0.1.2"
+        "recoil": "^0.1.2",
+        "recoil-persist": "^3.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.12.10",
