--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-google-login": "^5.2.2",
+        "react-google-oauth2": "^0.1.2",
         "react-grid-layout": "^1.3.0",
         "react-rating": "^2.0.5",
         "react-transition-group": "^4.4.2",
