--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "next": "^11.1.2",
         "next-compose-plugins": "^2.2.1",
         "next-i18next": "^7.0.1",
+        "pako": "^2.0.4",
         "prettier": "^2.2.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
