--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
             "@i18n": ["./i18n"]
         }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/common/CharDB/utility.js", "src/components/common/CharDB/utility.js"],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
     "exclude": ["node_modules"]
 }
