--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
         "@types/react-grid-layout": "^1.1.2",
         "@types/react-transition-group": "^4.4.3",
         "async-wait-until": "^2.0.8",
+        "async-web-storage": "^1.0.3",
         "axios": "^0.21.1",
         "dexie": "^3.0.3",
+        "localforage": "^1.10.0",
         "next": "^11.1.2",
         "next-compose-plugins": "^2.2.1",
         "next-i18next": "^7.0.1",
