--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
             "@recoil/*": ["src/recoil/*"],
             "@recoil": ["src/recoil"],
             "@i18n": ["./i18n"],
-            "@constants": ["src/constnats/"]
+            "@constants": ["src/constants"],
+            "@constants/*": ["src/constants/*"]
         }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
