--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "pako": "^2.0.4",
         "prettier": "^2.2.1",
         "react": "17.0.2",
+        "react-custom-scrollbars-2": "^4.4.0",
         "react-dom": "17.0.2",
         "react-google-login": "^5.2.2",
         "react-google-oauth2": "^0.1.2",
