--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react": "17.0.2",
         "react-custom-scrollbars-2": "^4.4.0",
         "react-dom": "17.0.2",
+        "react-flip-toolkit": "^7.0.13",
         "react-google-login": "^5.2.2",
         "react-google-oauth2": "^0.1.2",
         "react-grid-layout": "^1.3.0",
