--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "async-web-storage": "^1.0.3",
         "axios": "^0.21.1",
         "dexie": "^3.0.3",
+        "fetch-jsonp": "^1.2.1",
         "localforage": "^1.10.0",
         "next": "^11.1.2",
         "next-compose-plugins": "^2.2.1",
@@ -36,6 +37,7 @@
         "react-google-login": "^5.2.2",
         "react-google-oauth2": "^0.1.2",
         "react-grid-layout": "^1.3.0",
+        "react-h5-audio-player": "^3.7.2",
         "react-rating": "^2.0.5",
         "react-transition-group": "^4.4.2",
         "react-use": "^15.3.8",
