--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@next/bundle-analyzer": "^10.0.5",
         "@tailwindcss/aspect-ratio": "^0.3.0",
         "@types/react-grid-layout": "^1.1.2",
+        "@types/react-howler": "^3.7.3",
         "@types/react-transition-group": "^4.4.3",
         "async-wait-until": "^2.0.8",
         "async-web-storage": "^1.0.3",
@@ -30,6 +31,7 @@
         "next-i18next": "^7.0.1",
         "pako": "^2.0.4",
         "prettier": "^2.2.1",
+        "rc-slider": "^9.7.4",
         "react": "17.0.2",
         "react-custom-scrollbars-2": "^4.4.0",
         "react-dom": "17.0.2",
@@ -38,6 +40,8 @@
         "react-google-oauth2": "^0.1.2",
         "react-grid-layout": "^1.3.0",
         "react-h5-audio-player": "^3.7.2",
+        "react-howler": "^5.2.0",
+        "react-player": "^2.9.0",
         "react-rating": "^2.0.5",
         "react-transition-group": "^4.4.2",
         "react-use": "^15.3.8",
