--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "fetch-jsonp": "^1.2.1",
         "localforage": "^1.10.0",
         "next": "^12.0.3",
+        "next-auth": "^3.29.0",
         "next-compose-plugins": "^2.2.1",
         "next-i18next": "^7.0.1",
         "pako": "^2.0.4",
@@ -34,6 +35,7 @@
         "react-google-login": "^5.2.2",
         "react-google-oauth2": "^0.1.2",
         "react-grid-layout": "^1.3.0",
+        "react-json-view": "^1.21.3",
         "react-player": "^2.9.0",
         "react-rating": "^2.0.5",
         "react-use": "^15.3.8",
