--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,8 +59,8 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-  ],
+    "**/*.tsx",
+    "pages/api/[...nextauth].js"  ],
   "exclude": [
     "node_modules"
   ]
