--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "fetch-jsonp": "^1.2.1",
         "localforage": "^1.10.0",
         "next": "^12.0.3",
-        "next-auth": "^3.29.0",
+        "next-auth": "^4.0.0-beta.6",
         "next-compose-plugins": "^2.2.1",
         "next-i18next": "^7.0.1",
         "pako": "^2.0.4",
