--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
         "pako": "^2.0.4",
         "prettier": "^2.2.1",
         "rc-slider": "^9.7.4",
-        "react": "17.0.2",
-        "react-dom": "17.0.2",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "react-flip-toolkit": "^7.0.13",
         "react-google-login": "^5.2.2",
         "react-google-oauth2": "^0.1.2",
