--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     },
     "dependencies": {
         "@headlessui/react": "^1.4.1",
+        "@next-auth/firebase-adapter": "^0.1.2-pr.183-76202b42.8",
         "@next/bundle-analyzer": "^10.0.5",
         "@nivo/core": "^0.74.0",
         "@nivo/pie": "^0.74.0",
         "@tailwindcss/aspect-ratio": "^0.3.0",
         "axios": "^0.21.1",
         "fetch-jsonp": "^1.2.1",
+        "firebase": "^9.5.0",
         "localforage": "^1.10.0",
         "next": "^12.0.3",
         "next-auth": "^4.0.0-beta.6",
