--- a/package.json
+++ b/package.json
@@ -1,81 +1,81 @@
 {
-    "name": "frontend",
-    "version": "1.1.4",
-    "private": false,
-    "scripts": {
-        "dev": "next dev -p 3001",
-        "build": "next build",
-        "start": "next start",
-        "storybook": "start-storybook -p 6006",
-        "build-storybook": "build-storybook",
-        "build:analyze": "ANALYZE=true npm run build",
-        "lint": "eslint '**/*.{js,jsx,ts,tsx}'",
-        "prettier": "prettier --write '**/*.{js,jsx,ts,tsx}'",
-        "test": "jest -c test/jest.config.js"
-    },
-    "dependencies": {
-        "@headlessui/react": "^1.4.1",
-        "@next-auth/firebase-adapter": "^0.1.2-pr.183-76202b42.8",
-        "@next/bundle-analyzer": "^10.0.5",
-        "@nivo/core": "^0.74.0",
-        "@nivo/pie": "^0.74.0",
-        "@tailwindcss/aspect-ratio": "^0.3.0",
-        "axios": "^0.21.1",
-        "fetch-jsonp": "^1.2.1",
-        "firebase": "^9.5.0",
-        "localforage": "^1.10.0",
-        "next": "^12.0.3",
-        "next-auth": "^4.0.0-beta.6",
-        "next-compose-plugins": "^2.2.1",
-        "next-i18next": "^7.0.1",
-        "pako": "^2.0.4",
-        "prettier": "^2.2.1",
-        "rc-slider": "^9.7.4",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-flip-toolkit": "^7.0.13",
-        "react-google-login": "^5.2.2",
-        "react-google-oauth2": "^0.1.2",
-        "react-grid-layout": "^1.3.0",
-        "react-json-view": "^1.21.3",
-        "react-player": "^2.9.0",
-        "react-rating": "^2.0.5",
-        "react-use": "^15.3.8",
-        "recoil": "^0.1.2",
-        "recoil-persist": "^3.0.0",
-        "sharp": "^0.29.2"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.12.10",
-        "@next/eslint-plugin-next": "^11.1.2",
-        "@storybook/addon-actions": "^6.1.14",
-        "@storybook/addon-essentials": "^6.1.14",
-        "@storybook/addon-knobs": "^6.1.14",
-        "@storybook/addon-links": "^6.1.14",
-        "@storybook/preset-scss": "^1.0.3",
-        "@storybook/react": "^6.1.14",
-        "@types/node": "^14.14.13",
-        "@types/react": "^17.0.0",
-        "@types/react-dom": "^17.0.0",
-        "@types/react-grid-layout": "^1.3.0",
-        "@types/recoil": "0.0.1",
-        "@typescript-eslint/eslint-plugin": "^4.9.1",
-        "@typescript-eslint/parser": "^4.9.1",
-        "autoprefixer": "^10.1.0",
-        "babel-loader": "^8.2.2",
-        "css-loader": "^5.0.1",
-        "dotenv": "^8.2.0",
-        "eslint": "^7.15.0",
-        "eslint-config-prettier": "^7.0.0",
-        "eslint-plugin-prettier": "^3.2.0",
-        "identity-obj-proxy": "^3.0.0",
-        "isomorphic-unfetch": "^3.1.0",
-        "jest": "^26.6.3",
-        "nock": "^13.0.6",
-        "postcss": "^8.2.4",
-        "style-loader": "^2.0.0",
-        "tailwindcss": "^2.0.2",
-        "ts-jest": "^26.4.4",
-        "typescript": "^4.1.3"
-    }
+  "name": "frontend",
+  "version": "1.1.4",
+  "private": false,
+  "scripts": {
+    "dev": "NODE_OPTIONS='--inspect' next dev -p 3001",
+    "build": "next build",
+    "start": "next start",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "build:analyze": "ANALYZE=true npm run build",
+    "lint": "eslint '**/*.{js,jsx,ts,tsx}'",
+    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx}'",
+    "test": "jest -c test/jest.config.js"
+  },
+  "dependencies": {
+    "@headlessui/react": "^1.4.1",
+    "@next-auth/firebase-adapter": "^0.1.2-pr.183-76202b42.8",
+    "@next/bundle-analyzer": "^10.0.5",
+    "@nivo/core": "^0.74.0",
+    "@nivo/pie": "^0.74.0",
+    "@tailwindcss/aspect-ratio": "^0.3.0",
+    "axios": "^0.21.1",
+    "fetch-jsonp": "^1.2.1",
+    "firebase": "^9.5.0",
+    "localforage": "^1.10.0",
+    "next": "^12.0.3",
+    "next-auth": "^4.3.4",
+    "next-compose-plugins": "^2.2.1",
+    "next-i18next": "^7.0.1",
+    "pako": "^2.0.4",
+    "prettier": "^2.2.1",
+    "rc-slider": "^9.7.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-flip-toolkit": "^7.0.13",
+    "react-google-login": "^5.2.2",
+    "react-google-oauth2": "^0.1.2",
+    "react-grid-layout": "^1.3.0",
+    "react-json-view": "^1.21.3",
+    "react-player": "^2.9.0",
+    "react-rating": "^2.0.5",
+    "react-use": "^15.3.8",
+    "recoil": "^0.1.2",
+    "recoil-persist": "^3.0.0",
+    "sharp": "^0.29.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@next/eslint-plugin-next": "^11.1.2",
+    "@storybook/addon-actions": "^6.1.14",
+    "@storybook/addon-essentials": "^6.1.14",
+    "@storybook/addon-knobs": "^6.1.14",
+    "@storybook/addon-links": "^6.1.14",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^6.1.14",
+    "@types/node": "^17.0.31",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-grid-layout": "^1.3.0",
+    "@types/recoil": "0.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "autoprefixer": "^10.1.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "isomorphic-unfetch": "^3.1.0",
+    "jest": "^26.6.3",
+    "nock": "^13.0.6",
+    "postcss": "^8.2.4",
+    "style-loader": "^2.0.0",
+    "tailwindcss": "^2.0.2",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
+  }
 }
