--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.4",
   "private": false,
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' next dev -p 3001",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
