--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "pako": "^2.0.4",
     "prettier": "^2.2.1",
     "rc-slider": "^9.7.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-flip-toolkit": "^7.0.13",
     "react-google-login": "^5.2.2",
     "react-google-oauth2": "^0.1.2",
@@ -40,10 +40,12 @@
     "react-json-view": "^1.21.3",
     "react-player": "^2.9.0",
     "react-rating": "^2.0.5",
+    "react-three-fiber": "^6.0.13",
     "react-use": "^15.3.8",
     "recoil": "^0.1.2",
     "recoil-persist": "^3.0.0",
-    "sharp": "^0.29.2"
+    "sharp": "^0.29.2",
+    "three": "^0.140.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -59,6 +61,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-grid-layout": "^1.3.0",
     "@types/recoil": "0.0.1",
+    "@types/three": "^0.140.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "autoprefixer": "^10.1.0",
