--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,9 @@
             }
         }
     ],
+    "rules": {
+        "no-import-assign": "off"
+    },
     "env": {
         "node": true,
         "browser": true,
